--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@iconify-json/mdi": "^1.1.68",
     "@iconify-json/noto": "^1.1.20",
     "@iconify-json/ph": "^1.1.14",
+    "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/twemoji": "^1.1.16",
     "@tailwindcss/typography": "^0.5.14"
   }
