--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@vercel/speed-insights": "^1.1.0",
     "astro": "^4.14.3",
     "astro-icon": "^1.1.1",
     "module-alias": "^2.2.3",
