--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
-    "@astrojs/mdx": "^3.1.4",
-    "@astrojs/react": "^3.6.2",
-    "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.2.3",
+    "@astrojs/react": "^4.2.3",
+    "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^8.1.3",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@vercel/speed-insights": "^1.1.0",
-    "astro": "^4.14.3",
+    "astro": "^5.6.1",
     "astro-icon": "^1.1.1",
     "module-alias": "^2.2.3",
     "react": "^18.3.1",
